# px-image2pptx

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  SKILL.md  app.py  pyproject.toml  requirements.txt
px_image2pptx/: cli.py  inpaint.py  ocr.py  pipeline.py
tests/: test_e2e.py
